# rocq-ltac2-judgement

./: README.md  _CoqProject  dune  dune-project  rocq-ltac2-judgement-tests.opam  rocq-ltac2-judgement.opam
.github/workflows/: docker-action.yml
src/: dune  tac2judge.ml  tac2judge.mli
tests/: HOAS.v  dune  unif.v
theories/: Init.v  Judge.v  Unsafe.v  dune
